[package]
name = "video_player"
version = "0.1.0"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.3"
structopt = { version = "0.3", default-features = false }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'

